@@ -6,9 +6,9 @@ package = Search
 
 configure = admin/config/search/search_api/page
 
-; Information added by drupal.org packaging script on 2013-07-10
-version = "7.x-1.0-rc1"
+; Information added by drupal.org packaging script on 2013-09-01
+version = "7.x-1.0"
 core = "7.x"
 project = "search_api_page"
-datestamp = "1373454651"
+datestamp = "1378026711"
 
